Upgrade for rsp 2.0