@@ -3,7 +3,6 @@ package rsp.hn;
 import org.json.simple.JSONObject;
 import org.json.simple.parser.JSONParser;
 import org.json.simple.parser.ParseException;
-import rsp.util.StreamUtils;
 
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
@@ -27,7 +26,7 @@ public class HnApiService {
         return CompletableFuture.supplyAsync(() -> {
             try {
                 return parseStoriesIds(httpGet(new URL(HACKER_NEWS_BASE_URL + "topstories.json" )))
-                                            .stream().collect(Collectors.toList());
+                                            .stream().toList();
             } catch (Exception e) {
                 throw new RuntimeException(e);
             }
@@ -50,8 +49,6 @@ public class HnApiService {
     public CompletableFuture<List<State.Story>> stories(List<Integer> storiesIds) {
         return StreamUtils.sequence(storiesIds.stream().map(id -> story(id)).collect(Collectors.toList()));
     }
-
-
 
     private static State.Story parseStory(String storyJsonStr) throws ParseException {
         final JSONParser jsonParser = new JSONParser();
